<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>Tests</groupId>
  <artifactId>ParallelTests</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>ParallelTests</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
  	<dependency>
    		<groupId>org.testng</groupId>
    		<artifactId>testng</artifactId>
    		<version>6.14.3</version>
    		<scope>test</scope>
	</dependency>
	
	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-java</artifactId>
		<version>3.13.0</version>
	</dependency>
	
	 <dependency>
    		<groupId>io.appium</groupId>
    		<artifactId>java-client</artifactId>
    		<version>6.0.0</version>
	</dependency>
	
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
    <build>
<plugins>

     <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
            <fork>true</fork>
            <executable>/System/Library/Frameworks/JavaVM.framework/Versions/Current/Commands/java</executable>
            <source>9.0.4</source>
            <target>9.0.4</target>
          </configuration>
        </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <parallel>tests</parallel>
          <threadCount>2</threadCount>
        </configuration>
      </plugin>
 
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <parallel>tests</parallel>
          <forkMode>perthread</forkMode>
          <threadCount>2</threadCount>
          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
          <includes>
          <include>**/*Cases.java</include>
          </includes>
        </configuration>
      </plugin>

      
</plugins>
    </build>
</project>
